<resources>
    <string name="app_name">智慧酒店</string>
    <string name="air_condition">空气质量</string>
    <string name="bad_air_condition">中度污染</string>
    <string name="unsubscribe_hotel">张先生，\n已为您办理退房手续。\n欢迎下次光临！</string>
    <string name="check_out_hotel_name">希尔顿酒店及度假村</string>
    <string name="check_out_hotel_title">豪华大床房（含双早）</string>
    <string name="check_out_hotel_number">房号 1608</string>
    <string name="check_out_start_time">入住时间</string>
    <string name="check_out_end_time">离店时间</string>
    <string name="check_out_time_count">共2晚</string>
    <string name="check_out_room_rate">房费</string>
    <string name="button_ok">确定</string>
    <string name="meal_address">早餐用餐地址：一楼中餐厅</string>
    <string name="meal_time">早餐时间： 6:30-10:10</string>
    <string name="pay_goods_hotel_title">房号1608付费物品</string>
    <string name="pay_goods_item_1">编号：1</string>
    <string name="pay_goods_item_title_1">可乐</string>
    <string name="pay_goods_item_2">编号：2</string>
    <string name="pay_goods_item_title_2">红酒</string>
    <string name="pay_goods_item_3">编号：3</string>
    <string name="pay_goods_item_title_3">啤酒</string>
    <string name="pay_goods_item_4">编号：4</string>
    <string name="pay_goods_item_title_4">依云矿泉水</string>
    <string name="pay_goods_item_5">编号：5</string>
    <string name="pay_goods_item_title_5">坚果</string>
    <string name="pay_goods_item_6">编号：6</string>
    <string name="pay_goods_item_title_6">薯片</string>
    <string name="welcome_title">张先生，欢迎入住希尔顿酒店！</string>
    <string name="welcome_bed">豪华大床房（含双早）</string>
    <string name="welcome_start_time">入住时间 2018年12月25日</string>
    <string name="welcome_end_time">离店时间 2018年12月27日</string>
    <string name="speak_welcome">张先生您好，欢迎入住希尔顿酒店。我是您的专属智能管家。需要叫醒服务吗？起床后希望打开窗帘并收听今日要闻吗？想知道早餐几点结束吗？您只需要说"你好管家"，我就会为您服务。我们先体验一下，请试着对我说，"你好管家，明天天气如何？</string>
    <string name="answer_meal">今天早餐10点结束。现在距离早餐结束还有28分钟，如需用早餐，请尽快前往一楼电梯左边的中餐厅。</string>
    <string name="answer_clean_hotel">好的，我们将安排保洁阿姨尽快打扫您的房间。</string>
    <string name="answer_not_dndst">好的，请勿打扰模式已经设置好，下午3点将自动取消</string>
    <string name="ansewer_good_night">好的，所有灯光已关闭，晚安</string>
    <string name="answer_checkout">好的，我将为您安排退房事宜。您在2018年12月25日星期三入住，今日退房，一共两晚，房费1800元。您确认此次账单信息吗？</string>
    <string name="answer_pay_goods">好的，屏幕上列出了房间内可消费商品，请问您消费了哪些商品？</string>
    <string name="answer_unsubscribe">好的，退房手续已办好，您可将房卡留在房间。如果需要开发票，请用手机扫描屏幕上的二维码，并提供开票信息，前台将为您准备好增值税发票，您下楼自取即可。对于此次住宿体验，如果5分表示满意，1分表示不满意，请问您给我们打几分？</string>
    <string name="answer_error">哎呀，这个问题好像太难了！</string>
    <string name="answer_video">好的，下面是今日要闻。</string>
    <string name="answer_unsubscribe_end">谢谢！离开房间时请不要遗忘您的个人物品，期待您下次再次选择我们酒店！</string>
    <string name="inside_temprature">室内%s</string>
    <string name="answer_thank_you">不客气</string>
    <string name="answer_okay">好的</string>
    <string name="answer_controller">已为你跳转智能家居控制中心</string>
</resources>
