<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_checkout_bg">

    <TextView
        android:id="@+id/tv_hotel_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="45dp"
        android:text="@string/pay_goods_hotel_title"
        android:textColor="@color/text_white"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/ll_item_1"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_hotel_number"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_goods_item_1"
            android:textColor="@color/text_white"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="106dp"
            android:layout_height="110dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/image_cola"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_goods_item_title_1"
            android:textColor="@color/text_white"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_item_2"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ll_item_1"
        android:layout_below="@id/tv_hotel_number"
        android:layout_marginLeft="176dp"
        android:layout_toRightOf="@id/ll_item_1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_goods_item_2"
            android:textColor="@color/text_white"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="106dp"
            android:layout_height="110dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/image_redwine"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_goods_item_title_2"
            android:textColor="@color/text_white"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_item_3"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ll_item_1"
        android:layout_below="@id/tv_hotel_number"
        android:layout_marginLeft="176dp"
        android:layout_toRightOf="@id/ll_item_2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_goods_item_3"
            android:textColor="@color/text_white"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="106dp"
            android:layout_height="110dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/image_beer"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_goods_item_title_3"
            android:textColor="@color/text_white"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_item_4"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ll_item_1"
        android:layout_below="@id/tv_hotel_number"
        android:layout_marginLeft="176dp"
        android:layout_toRightOf="@id/ll_item_3"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_goods_item_4"
            android:textColor="@color/text_white"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="106dp"
            android:layout_height="110dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/image_evian"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_goods_item_title_4"
            android:textColor="@color/text_white"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_item_5"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_item_1"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_goods_item_5"
            android:textColor="@color/text_white"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="106dp"
            android:layout_height="110dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/image_nuts"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_goods_item_title_5"
            android:textColor="@color/text_white"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_item_6"
        android:layout_width="106dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/ll_item_5"
        android:layout_below="@id/ll_item_1"
        android:layout_marginLeft="176dp"
        android:layout_toRightOf="@id/ll_item_5"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_goods_item_6"
            android:textColor="@color/text_white"
            android:textSize="20sp"/>

        <ImageView
            android:layout_width="106dp"
            android:layout_height="110dp"
            android:layout_marginBottom="14dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/image_potatochips"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pay_goods_item_title_6"
            android:textColor="@color/text_white"
            android:textSize="20sp"/>

    </LinearLayout>

</RelativeLayout>