<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_logo"/>

    <RelativeLayout
        android:id="@+id/ll_time"
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="21dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextClock
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.1"
                android:format24Hour="HH:mm"
                android:textColor="@color/text_grey"
                android:textSize="44sp"/>

            <TextClock
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:format24Hour="yyyy年MM月dd日 E"
                android:textColor="@color/text_grey"
                android:textSize="15sp"/>

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/welcome_title"
        android:textColor="@color/text_white"
        android:textSize="62dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/iv_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_welcome"
        android:layout_marginTop="37dp"
        android:src="@drawable/image_line"/>

    <TextView
        android:id="@+id/tv_welcome_bed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_line"
        android:layout_centerInParent="true"
        android:layout_marginTop="65dp"
        android:text="@string/welcome_bed"
        android:textStyle="bold"
        android:textColor="@color/text_white"
        android:textSize="22dp"/>

    <TextView
        android:id="@+id/tv_welcome_time_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_welcome_bed"
        android:layout_centerInParent="true"
        android:layout_marginTop="26dp"
        android:text="@string/welcome_start_time"
        android:textColor="@color/text_white"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/tv_welcome_time_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_welcome_time_start"
        android:layout_centerInParent="true"
        android:layout_marginTop="9dp"
        android:text="@string/welcome_end_time"
        android:textColor="@color/text_white"
        android:textSize="20dp"/>

</RelativeLayout>